<resources>
    <string name="app_name">SpaceApp</string>
    <string name="pod_description">POD Description</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="error">Error</string>
    <string name="loading">Loading</string>
    <string name="uranus">Uranus</string>
    <string name="mars">Mars</string>
    <string name="europa">Europa</string>
    <string name="theme">Theme</string>
    <string name="settings">Settings</string>
    <string name="theme_example">Theme Example:</string>
    <string name="outlined_button">Outlined Button</string>
    <string name="raised_button">Raised Button</string>
    <string name="unelevated_button">Unelevated Button</string>
    <string name="text_button">Text Button</string>
    <string name="outlined_box_text_field_example">Outlined Box Text Field Example</string>
    <string name="some_text">Some text</string>
    <string name="filled_box_text_field">Filled Box Text Field</string>
    <string name="some_other_text">Some other text</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="tab_4">Tab 4</string>
    <string name="switchButton">Switch</string>
    <string name="radio_button">Radio Button</string>
    <string name="cardview">CardView</string>
    <string name="APOD">APOD</string>
    <string name="earth">Earth</string>
    <string name="Mars">Mars</string>
    <string name="bottom_nav_view_APOD_tooltip">Astronomy Picture of the Day</string>
    <string name="earth_photo_of_the_day">Earth Photo of the day</string>
    <string name="mars_rover_s_photo_of_the_day">Mars Rover\'s Photo of the Day</string>
    <string name="mars_heading">Mars Photo of the Day</string>
    <string name="mars_photo_date">Date of the  Photo: </string>
    <string name="search_on_wikipedia">Search on wikipedia</string>
    <string name="mars_wiki_text">Mars is the fourth planet from the Sun and the second-smallest planet in the Solar System, being larger than only Mercury. In English, Mars carries the name of the Roman god of war and is often referred to as the "Red Planet". The latter refers to the effect of the iron oxide prevalent on Mars\'s surface, which gives it a reddish appearance (as shown), that is distinctive among the astronomical bodies visible to the naked eye. Mars is a terrestrial planet with a thin atmosphere, with surface features reminiscent of the impact craters of the Moon and the valleys, deserts and polar ice caps of Earth. The days and seasons are comparable to those of Earth, because the rotational period as well as the tilt of the rotational axis relative to the ecliptic plane are similar. Mars is the site of Olympus Mons, the largest volcano and highest known mountain on any planet in the Solar System, and of Valles Marineris, one of the largest canyons in the Solar System. The smooth Borealis basin in the Northern Hemisphere covers 40% of the planet and may be a giant impact feature. Mars has two moons, Phobos and Deimos, which are small and irregularly shaped. These may be captured asteroids, similar to 5261 Eureka, a Mars trojan. Mars has been explored by several uncrewed spacecraft. Mariner 4 was the first spacecraft to visit Mars; launched by NASA on 28 November 1964, it made its closest approach to the planet on 15 July 1965. Mariner 4 detected the weak Martian radiation belt, measured at about 0.1% that of Earth, and captured the first images of another planet from deep space. The Soviet Mars 3 mission included a lander, which achieved a soft landing in December 1971; however, contact was lost seconds after touchdown. On 20 July 1976, Viking 1 performed the first successful landing on the Martian surface. On 4 July 1997, the Mars Pathfinder spacecraft landed on Mars and on 5 July released its rover, Sojourner, the first robotic rover to operate on Mars.</string>
    <string name="mars_test_text">Mars test text</string>
    <string name="yesterday">Yesterday</string>
    <string name="the_day_before_yesterday">The day before yesterday</string>
    <string name="today">Today</string>
    <string name="notes">Notes</string>
    <string name="note_text_example">Space is the boundless three-dimensional extent in which objects and events have relative position and direction. In classical physics, physical space is often conceived in three linear dimensions, although modern physicists usually consider it, with time, to be part of a boundless four-dimensional continuum known as spacetime. The concept of space is considered to be of fundamental importance to an understanding of the physical universe. However, disagreement continues between philosophers over whether it is itself an entity, a relationship between entities, or part of a conceptual framework.</string>
</resources>