<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="?attr/themeColorOnPrimary"
        android:stateListAnimator="@animator/toolbar_elevation"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/mars_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textColor="?attr/colorPrimary"
            android:text="@string/mars_heading"
            android:textSize="48sp"
            />
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="52dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



        <com.example.spaceapp.framework.util.EquilateralImageView
            android:id="@+id/image_mars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/mars_rover_s_photo_of_the_day"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/mars_heading"
            app:srcCompat="@drawable/ic_no_image" />

        <TextView
            android:id="@+id/mars_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="24sp"
            android:text="@string/mars_test_text"
            app:layout_constraintBottom_toBottomOf="@id/mars_wiki_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mars_wiki_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mars_wiki_text"
            android:paddingTop="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/mars_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</FrameLayout>